[package]
name = "todo_tui"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["Amirhossein Mafi <amir77mafi@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
uuid = { version = "1.18.0", features = ["v4"] }
